# qrpm

./: LICENSE  README.md  pyproject.toml
data/: event_log_simulation.py  qnet_config.py  sim_config.py
data/event_log/: Example_Inventory_Management_execution_log.sqlite
qrpm/: GLOBAL.py
qrpm/analysis/: counterOperations.py  dataImport.py  dataVisualisation.py  generalDataOperations.py  modelDiscovery.py  objectQuantities.py  ocelOperations.py  quantityOperations.py  quantityState.py
qrpm/analysis/pm4py_interface/: interface_pm4py.py
qrpm/app/: app.py  dataStructure.py  layout.py  operations.py  preparation.py  qnet_component.py  qrpm_app.py
qrpm/app/data_operations/: log_overview.py  qop_data.py  qstate_data.py  sublog_creation.py
qrpm/app/files/: demo_data.sqlite  qnet_data.json  qnet_demo.dot
